# socks

./: .gitignore  Cargo.toml  Makefile  README.md  apt.dev  doxy.gen  socks.metaL.py
doc/: .gitignore  rtos.md
doc/bare/: embedonomicon.md  guest.md  i386.md  smallest.md
doc/secure/: ASPICE.md  ISO_26262.md
docs/: ASPICE.html  ASPICE_8md.html  ISO26262.html  ISO__26262_8md.html  README_8md.html  dir_146d2f07fafa39f39b826b0e133696cd.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_93b531b81ec1ec322f0aaec14361b7ec.html  dir_e68e8157741866f444e17edd764ebbae.html  embedonomicon.html  embedonomicon_8md.html  files.html  graph_legend.html  guest.html  guest_8md.html  i386.html  i386_8md.html  index.html  pages.html  rtos.html  rtos_8md.html  smallest.html  smallest_8md.html  socks_8c.html  socks_8h.html  socks_8h_source.html
docs/rust/: crates.js  search-index.js  settings.html  source-files.js
docs/rust/socks/: all.html  fn.main.html  index.html
docs/rust/src/socks/: main.rs.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
lib/: init.f
src/: main.rs  test.rs
